fix breakpoint for mobile large
cards were overlapping the navigation. Changed the height at which the
font size changes

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -30,7 +30,7 @@ only screen and (        min-device-pixel-ratio: 3){
 //responsive portrait
 $break-mobile-x-small: 321px;
 $break-mobile-small: 361px;
-$break-mobile-large: 450px;
+$break-mobile-large: 520px;
 $break-tablet: 768px;
 
 @import 'layout';
